add: ssh/sshd_config

--- a/.emacs.d/history
+++ b/.emacs.d/history
@@ -5,4 +5,4 @@
 (setq org-read-date-history '("            "))
 (setq buffer-name-history '("config • i3blocks"))
 (setq extended-command-history '("lis" "list-color"))
-(setq file-name-history '("~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/scripts/volume" "~/dotfiles/.Xresources" "~/dotfiles/.config/i3blocks/config" "/home/alamin/dotfiles/.i3/config" "/home/alamin/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/scripts/volume" "~/dotfiles/.Xresources" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.i3/config" "~/scripts/volume" "~/dotfiles/.Xresources" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.Xresources" "/home/alamin/.Xresources" "/home/alamin/scripts/volume" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.i3/config" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.i3/config" "/home/alamin/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/.config/i3blocks/config" "/home/alamin/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/scripts/i3blocks_scripts/custom/custom_bandwidth" "~/dotfiles/.config/i3blocks/config" "/home/alamin/dotfiles/scripts/i3blocks_scripts/custom/custom_bandwidth" "/home/alamin/scripts/network.sh" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/.config/i3blocks/config" "~/.config/i3blocks/config" "/home/alamin/.config/i3blocks/" "~/dotfiles/.i3/config" "/home/alamin/.i3/config" "~/dotfiles/.emacs.d/recentf" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.emacs.d/custom.el"))
+(setq file-name-history '("~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.Xresources" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/git/.gitconfig" "~/dotfiles/.i3/config" "/etc/ssh/sshd_config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.Xresources" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/git/.gitconfig" "~/dotfiles/.i3/config" "/etc/ssh/sshd_config" "/home/alamin/.i3/config" "/.i3/config" "/etc/ssh/sshd_config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.Xresources" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.i3/config" "/home/alamin/dotfiles/git/.gitconfig" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/scripts/volume" "~/dotfiles/.Xresources" "~/dotfiles/.config/i3blocks/config" "/home/alamin/dotfiles/.i3/config" "/home/alamin/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/scripts/volume" "~/dotfiles/.Xresources" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.i3/config" "~/scripts/volume" "~/dotfiles/.Xresources" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.Xresources" "/home/alamin/.Xresources" "/home/alamin/scripts/volume" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.i3/config" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.i3/config" "/home/alamin/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/.config/i3blocks/config" "/home/alamin/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/scripts/i3blocks_scripts/custom/custom_bandwidth" "~/dotfiles/.config/i3blocks/config" "/home/alamin/dotfiles/scripts/i3blocks_scripts/custom/custom_bandwidth" "/home/alamin/scripts/network.sh" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.i3/config" "~/dotfiles/.config/i3blocks/config" "~/.config/i3blocks/config" "/home/alamin/.config/i3blocks/" "~/dotfiles/.i3/config" "~/dotfiles/.emacs.d/recentf" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.emacs.d/custom.el"))
