--- a/.emacs.d/history
+++ b/.emacs.d/history
@@ -3,6 +3,6 @@
 
 (setq savehist-minibuffer-history-variables '(org-read-date-history buffer-name-history minibuffer-history extended-command-history file-name-history))
 (setq org-read-date-history '("            "))
-(setq buffer-name-history '("config • i3blocks"))
+(setq buffer-name-history '("recentf" "book_august_2017.org" "config • .i3" "*Calendar*" "config • i3blocks"))
 (setq extended-command-history '("lis" "list-color"))
-(setq file-name-history '("~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/dotfiles/.config/neofetch/config" "~/dotfiles/.i3/config" "~/.emacs.d/org-clock-save.el" "/home/alamin/dotfiles/.i3/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.i3/config" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/dotfiles/.config/neofetch/config" "~/.config/neofetch/config" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.i3/config" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/.config/neofetch/config" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.i3/config" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/.config/neofetch/config" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.i3/config" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/.config/neofetch/config" "~/.emacs.d/org-clock-save.el" "~/.config/neofetch/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.i3/config" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.i3/config" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.i3/config" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.i3/config"))
+(setq file-name-history '("~/dotfiles/.i3/config" #("/home/alamin/.i3/config" 0 23 (ivy-index 1)) "~/dotfiles/.config/i3blocks/config" #("/home/alamin/.config/i3blocks/config" 0 36 (ivy-index 2)) "~/dotfiles/scripts/i3blocks_scripts/volume" #("/home/alamin/scripts/volume" 0 27 (ivy-index 0)) "/home/alamin/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/terminator/config" "~/dotfiles/.config/neofetch/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/dotfiles/.config/i3blocks/config" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/dotfiles/.config/neofetch/config" "~/dotfiles/.emacs.d/recentf" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/dotfiles/.config/neofetch/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/dotfiles/.config/neofetch/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/dotfiles/.config/neofetch/config" "~/dotfiles/.i3/config" "~/.emacs.d/org-clock-save.el" "/home/alamin/dotfiles/.i3/config" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.i3/config" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/dotfiles/.config/neofetch/config" "~/.config/neofetch/config" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.i3/config" "~/Competitive-Programming/Algorithm_Challenge/Data_Structures_And_Libraries/230 Borrowers.cpp" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.config/terminator/config" "~/.config/neofetch/config" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/iface" "~/dotfiles/scripts/i3blocks_scripts/microphone" "~/dotfiles/.Xresources" "~/dotfiles/git/.gitconfig" "~/Dropbox/log-files/all_log.org"))
