--- a/.emacs.d/history
+++ b/.emacs.d/history
@@ -3,6 +3,6 @@
 
 (setq savehist-minibuffer-history-variables '(xref--read-identifier-history org-read-date-history buffer-name-history minibuffer-history extended-command-history file-name-history))
 (setq org-read-date-history '("      " "            "))
-(setq buffer-name-history '("book_august_2017.org" "config" ".zshrc" "config • i3blocks" ".i3" "volume" "recentf" "K01alsa-utils" "*scratch*" "recentf" "config • neofetch" "book_august_2017.org" "config • .i3" "*Calendar*" "config • i3blocks"))
+(setq buffer-name-history '("*scratch*" "recentf" "config • neofetch" "book_august_2017.org" "config • .i3" "*Calendar*" "config • i3blocks"))
 (setq extended-command-history '("lis" "list-color"))
-(setq file-name-history '("~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/fred.c" "~/Linux_Playground/Beginning_Linux_Programming/hello2.c" "/etc/rc0.d/K01alsa-utils" "~/.emacs.d/org-clock-save.el" "/etc/rc0.d/K01alsa-utils" "/etc/rc.d" "~/*scratch*" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/hello2.c" "~/Linux_Playground/Beginning_Linux_Programming/fred.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/hello2.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/fred.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/bill.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/hello.c" "~/.emacs.d/org-clock-save.el" "~/Linux_Playground/hello.c" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/.emacs.d/org-clock-save.el" "/home/alamin/Dropbox/log-files/all_log.org" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/all_log.org" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "/home/alamin/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.i3/config" "~/dotfiles/zsh/.zshrc" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/all_log.org" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.emacs.d/recentf" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.i3/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.config/neofetch/config" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.i3/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.config/neofetch/config" "~/dotfiles/.emacs.d/recentf"))
+(setq file-name-history '("~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/fred.c" "~/Linux_Playground/Beginning_Linux_Programming/hello2.c" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.i3/config" "~/dotfiles/.config/i3lock/i3lock.sh" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/.config/i3lock/i3lock.sh" "/home/alamin/.config/i3lock/i3lock.sh" "/home/alamin/dotfiles/.i3/config" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/fred.c" "~/Linux_Playground/Beginning_Linux_Programming/hello2.c" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/fred.c" "~/Linux_Playground/Beginning_Linux_Programming/hello2.c" "/etc/rc0.d/K01alsa-utils" "~/.emacs.d/org-clock-save.el" "/etc/rc0.d/K01alsa-utils" "/etc/rc.d" "~/*scratch*" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/hello2.c" "~/Linux_Playground/Beginning_Linux_Programming/fred.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/hello2.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/fred.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/bill.c" "/home/alamin/Linux_Playground/Beginning_Linux_Programming/lib.h" "~/Linux_Playground/Beginning_Linux_Programming/bill.c" "~/Linux_Playground/Beginning_Linux_Programming/hello.c" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/.emacs.d/org-clock-save.el" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/Linux_Playground/hello.c" "~/.emacs.d/org-clock-save.el" "~/Linux_Playground/hello.c" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/Dropbox/log-files/all_log.org" "~/.emacs.d/org-clock-save.el" "/home/alamin/Dropbox/log-files/all_log.org" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/zsh/.zshrc" "~/dotfiles/.i3/config" "~/Dropbox/log-files/all_log.org" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "/home/alamin/Dropbox/log-files/book-portfolio/book_september_2017.org" "~/dotfiles/.emacs.d/recentf" "~/dotfiles/scripts/i3blocks_scripts/volume" "~/dotfiles/.config/i3blocks/config" "~/dotfiles/.i3/config" "~/dotfiles/zsh/.zshrc" "~/Dropbox/log-files/book-portfolio/book_august_2017.org" "~/Dropbox/log-files/all_log.org" "~/.emacs.d/org-clock-save.el"))
